# config/routes.rb
@@ -8,9 +8,7 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       get "health", to: "health#show"
-      resource :analytics, only: :show do
-        post :ask
-      end
+      resource :analytics, only: :show
       resource :session, only: %i[show create destroy]
       resources :employees, only: %i[index show create update] do
         resources :compensation_records, only: %i[create]
